Opened 14 years ago
Closed 14 years ago
#3445 closed bug (fixed)
smp_do_mp_config does not check MPS table CPU entries for the enabled flag
Reported by: | jkeeping | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In system/boot/platform/bios_ia32/smp.cpp if ACPI is disabled and the MPS tables are loaded, then the enabled flag is not checked for CPUs. This causes Haiku to fail to boot under KVM on Linux.
Attachments (1)
Change History (3)
comment:1 by , 14 years ago
by , 14 years ago
Attachment: | haiku-mps-check-enabled.patch added |
---|
Updated patch which is much cleaner and doesn't rely on the enabled processors being the first ones.
comment:2 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Patch applied in hrev29222.
Thanks.
Note:
See TracTickets
for help on using tickets.
The patch I've attached is sufficient in the case when the enabled CPUs are the first CPUs found. It is sufficient to allow Haiku to run as a KVM guest, but a more involved patch will be needed for proper support.