Applied patch supplied by jkeeping in #3445: smp_do_mp_config wasn't checking MPS table CPU entries for the enabled flag. This caused Haiku to fail to boot under KVM on Linux.

Thanks you, jkeeping.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29222 a95241bf-73f2-0310-859d-f6bbb57e9c96